update .env file

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-CHROMA_API_KEY=ck-JB2SynmZMqy3UFT8hiXNNjDPXu7WmSYFar4T73Dcg6T9
-CHROMA_TENANT=cd42a4d3-7676-46c3-aff2-a7160c0179bb
-CHROMA_DATABASE=querion
-NVIDIA_API_KEY=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
+CHROMA_API_KEY=secret_querion_apikey
+CHROMA_TENANT=secret_tenant
+CHROMA_DATABASE=db_name
+NVIDIA_API_KEY=Secret_nvidia_apikey
